# tp-2019-1c-Los-Magios

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
Kernel/: CLIHandlers.c  Commands.c  Commands.h  Config.h  Criteria.c  Criteria.h  Handlers.c  Kernel.c  Metadata.c  Metadata.h  Metric.c  Metric.h  PacketBuilders.h  Runner.c  Runner.h  kernel.conf
LFS/: API.c  API.h  CLIHandlers.c  CLIHandlers.h  Compactador.c  Compactador.h  Config.h  FileSystem.c  FileSystem.h  Handlers.c  Handlers.h  Lissandra.c  LissandraLibrary.c  LissandraLibrary.h  Memtable.c  Memtable.h  lissandra.conf
Memoria/: API.c  API.h  CLIHandlers.c  CLIHandlers.h  Config.h  FileSystemSocket.h  Frame.h  Gossip.c  Gossip.h  Handlers.c  Handlers.h  MainMemory.c  MainMemory.h  Memoria.c  PageTable.c  PageTable.h  SegmentTable.c  SegmentTable.h  memoria.conf
Shared/: Consistency.h  Defines.h
Shared/Config/: FileWatcher.c  FileWatcher.h
Shared/Console/: Console.c  Console.h  ConsoleInput.h
Shared/Logging/: Appender.c  Appender.h  AppenderConsole.c  AppenderConsole.h  AppenderFile.c  AppenderFile.h  LogCommon.h  LogMessage.c  LogMessage.h  Logger.c  Logger.h
Shared/Networking/: IPAddress.c  IPAddress.h  Packet.h  Socket.c  Socket.h
Shared/Protocol/: OpcodeHandler.h  Opcodes.c  Opcodes.h
Shared/Utility/: ByteConverter.h  EventDispatcher.c  EventDispatcher.h  FDIImpl.h  File.c  File.h  FileDescInterface.h  Malloc.c  Malloc.h  Threads.h  Timer.c  Timer.h  vector.c  vector.h
Shared/libcommons/: bitarray.c  bitarray.h  config.c  config.h  dictionary.c  dictionary.h  hashmap.c  hashmap.h  list.c  list.h  queue.c  queue.h  string.c  string.h
(+30 files in other folders)
